--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ Sphinx==5.1.1
 sphinx-copybutton==0.5.2
 sphinxcontrib-mermaid==0.9.2
 sphinx-intl==2.1.0
+sphinx-gitstamp==0.4.0
 sphinx-notfound-page==0.8.3
 sphinx-tabs==3.4.1
 sphinxcontrib-applehelp==1.0.4
