--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ Sphinx==5.1.1
 sphinx-copybutton==0.5.2
 sphinxcontrib-mermaid==0.9.2
 sphinx-intl==2.1.0
-sphinx-gitstamp==0.4.0
+sphinx-last-updated-by-git==0.3.7
 sphinx-notfound-page==0.8.3
 sphinx-tabs==3.4.1
 sphinxcontrib-applehelp==1.0.4
@@ -36,3 +36,6 @@ sphinxcontrib-serializinghtml==1.1.5
 typing_extensions==4.7.1
 urllib3==2.0.7
 zipp==3.16.2
+
+six
+
