--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pytz==2023.3
 PyYAML==6.0.1
 requests==2.32.2
 setuptools==68.1.2
+six==1.16.0
 snowballstemmer==2.2.0
 Sphinx==5.1.1
 sphinx-copybutton==0.5.2
@@ -36,6 +37,4 @@ sphinxcontrib-serializinghtml==1.1.5
 typing_extensions==4.7.1
 urllib3==2.0.7
 zipp==3.16.2
-
-six
 
